--- a/.github/templates/.env-template
+++ b/.github/templates/.env-template
@@ -3,6 +3,7 @@
 EXPRESS_PORT=
 
 # Discord Application API
+# Can be find on your Developer Portal of Discord on OAuth2: https://discord.com/developers/applications
 CLIENT_ID=
 CLIENT_SECRET=
 CLIENT_REDIRECT=
