Dynamic DropdownMenu items

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,15 +1,18 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "🔎 Hash Search",
+  "name": "A simple Discord bots finder.",
+  "author": "Leonardo Luiz Gava",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "256x256",
       "type": "image/x-icon"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#7289DA",
+  "background_color": "#ffffff",
+
+  "orientation": "landscape-primary"
 }
