Change log message from backend

--- a/.github/templates/.env
+++ b/.github/templates/.env
@@ -8,6 +8,8 @@ CLIENT_ID=
 CLIENT_SECRET=
 CLIENT_REDIRECT=
 
+SUCCESS_REDIRECT=
+
 # MongoDB
 # Remember to encode your password if necessary!
 MONGO_USERNAME=
