--- a/backend/package.json
+++ b/backend/package.json
@@ -1,30 +1,26 @@
 {
-  "name": "hash-search",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon  ./src/app.js",
-    "start": "node ./src/app.js"
+    "dev": "nodemon ./src/index.js",
+    "start": "node ./src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/llgava/hash-search.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/llgava/hash-search/issues"
-  },
-  "homepage": "https://github.com/llgava/hash-search#readme",
+  "keywords": [
+    "API",
+    "REST",
+    "JAVASCRIPT"
+  ],
+  "author": "Leonardo Luiz Gava",
+  "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "mongoose": "^5.10.10",
+    "mongoose": "^5.10.12",
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4"
   }
