--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.10.12",
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4"
