Create my-bots and account-settings pages base

--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -1,5 +1,4 @@
 {
   "loginURL": "http://localhost:3000/login",
-  "logoutURL": "http://localhost:3000/logout",
-  "userDataURL": "http://localhost:3000/me"
+  "logoutURL": "http://localhost:3000/logout"
 }
