--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -1,4 +1,7 @@
 {
   "loginURL": "http://localhost:3000/login",
-  "logoutURL": "http://localhost:3000/logout"
+  "logoutURL": "http://localhost:3000/logout",
+
+  "myBotsURL": "/my-bots",
+  "accountSettingsURL": "/account-settings"
 }
