--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "files.exclude": {
-    "backend/": false,
+    "backend/": true,
     "frontend/": false,
     ".github/": true,
     ".editorconfig": true,
