--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,18 @@
 {
   "files.exclude": {
-    "backend/": true,
+    "backend/": false,
     "frontend/": false,
     ".github/": true,
     ".editorconfig": true,
     ".gitignore": true,
     "LICENSE": true,
     "package-lock.json": true,
-    "README.md": true
+    "README.md": true,
+
+    // Not used or edited anymore
+    "**/fonts/": true,
+    "**/images/": false,
+    "**/public/": true
   },
 
   "[javascript]": {
