--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,12 @@
     ".gitignore": true,
     "LICENSE": true,
     "package-lock.json": true,
-    "README.md": true
+    "README.md": true,
+
+    // Not used or edited anymore
+    "**/fonts/": true,
+    "**/images/": true,
+    "**/public/": true
   },
 
   "[javascript]": {
